# midi-mqtt-bridge

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  paho_mqtt.hpp  probe.cpp  probe.h
ext/paho.mqtt.c-1.3.9/: CMakeLists.txt  build.sh
ext/rtmidi/: CMakeLists.txt
ext/rtmidi/tests/: qmidiin.cpp
